--- a/.github/workflows/php-skip.yml
+++ b/.github/workflows/php-skip.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: [ '8.1' ]
       fail-fast: false
     steps:
       - run: 'echo "No tests required"'
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: [ '8.1' ]
       fail-fast: false
     steps:
       - run: 'echo "No tests required"'
