--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -56,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: [ '8.1' ]
       fail-fast: false
     steps:
       - name: Setup PHP
@@ -96,7 +96,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: [ '8.1' ]
       fail-fast: false
     steps:
       - name: Setup PHP
