--- a/.github/workflows/sanity-productV2.yml
+++ b/.github/workflows/sanity-productV2.yml
@@ -20,7 +20,7 @@ jobs:
     name: Sanity Product V2
     strategy:
       matrix:
-        php: [ '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: [ '8.1' ]
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
