--- a/src/PrestaShopBundle/Resources/config/services/adapter/data_configuration.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/data_configuration.yml
@@ -134,8 +134,11 @@ services:
       - '@prestashop.adapter.multistore_feature'
       - '@prestashop.core.form.choice_provider.invoice_model_by_name'
 
+  PrestaShop\PrestaShop\Adapter\Language\LanguageDataProvider:
+    public: false
+
   prestashop.adapter.data_provider.language:
-    class: 'PrestaShop\PrestaShop\Adapter\Language\LanguageDataProvider'
+    alias: 'PrestaShop\PrestaShop\Adapter\Language\LanguageDataProvider'
 
   prestashop.adapter.language.activator:
     class: 'PrestaShop\PrestaShop\Adapter\Language\LanguageActivator'
