--- a/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/choice_provider.yml
@@ -6,15 +6,10 @@ services:
       $langId: '@=service("prestashop.adapter.legacy.context").getLanguage().id'
       $themeCollection: '@=service("prestashop.core.addon.theme.repository").getListAsCollection()'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\LanguageByIdChoiceProvider:
-    arguments:
-      - '@prestashop.adapter.data_provider.language'
+  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\:
+    resource: '../../../Core/Form/ChoiceProvider/*'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\LanguageChoiceProvider:
-    arguments:
-      - '@=service("prestashop.adapter.data_provider.language").getLanguages(false)'
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CountryByIdChoiceProvider:
+  PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ZoneByIdChoiceProvider:
 
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TimezoneByNameChoiceProvider:
     arguments:
@@ -30,8 +25,6 @@ services:
       - '@=service("prestashop.core.language.pack.loader.remote").getLanguagePackList()'
       - '@prestashop.adapter.language.validator'
       - '@prestashop.adapter.data_provider.language'
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CountryByIsoCodeChoiceProvider:
 
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\GroupByIdChoiceProvider:
     arguments:
@@ -55,25 +48,9 @@ services:
     arguments:
       - '@prestashop.adapter.contact.repository'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TranslationTypeChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\EmailContentTypeChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeByNameChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeByNameWithEmailsChoiceProvider:
-
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ModuleByNameChoiceProvider:
     arguments:
       - '@=service("prestashop.core.admin.module.repository").getInstalledModules()'
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\StatusChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CanonicalRedirectTypeChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CategoryDeleteModeChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerRequiredFieldsChoiceProvider:
 
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ImportMatchConfigurationChoiceProvider:
     arguments:
@@ -84,13 +61,9 @@ services:
       - '@=service("prestashop.core.import.fields_provider_finder")'
       - '@=service("session").get("entity")'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerDeleteMethodChoiceProvider:
-
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemePageLayoutsChoiceProvider:
     arguments:
       - '@=service("prestashop.adapter.legacy.context").getContext().shop.theme'
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeZipChoiceProvider:
 
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeChoiceProvider:
     arguments:
@@ -99,8 +72,6 @@ services:
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CurrencyNameByIsoCodeChoiceProvider:
     arguments:
       - '@=service("prestashop.core.localization.cldr.locale_repository").getLocale(service("prestashop.adapter.legacy.context").getContext().language.getLocale()).getAllCurrencies()'
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\PermissionsChoiceProvider:
 
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\DefaultMetaPageNameChoiceProvider:
     arguments:
@@ -111,8 +82,6 @@ services:
     arguments:
       - '@request_stack'
       - '@prestashop.adapter.meta.data_provider'
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TaxAddressTypeChoiceProvider:
 
   PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\TaxRuleGroupChoiceProvider:
     arguments:
@@ -136,10 +105,6 @@ services:
     arguments:
       - '@prestashop.core.mail_template.theme_catalog'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\OrderDiscountTypeChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\AddressRequiredFieldsChoiceProvider:
-
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerAddressesChoiceProvider:
     arguments:
       - '@prestashop.adapter.data_provider.customer'
@@ -159,332 +124,13 @@ services:
       - '@prestashop.adapter.legacy.configuration'
       - '@=service("prestashop.adapter.legacy.context").getContext().language.id'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductVisibilityChoiceProvider:
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductConditionChoiceProvider:
-
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\OutOfStockTypeChoiceProvider:
     arguments:
       - '@translator'
       - '@=service("prestashop.adapter.legacy.configuration").getBoolean("PS_ORDER_OUT_OF_STOCK")'
 
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\PackStockTypeChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomizationFieldTypeChoiceProvider:
   PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductImagesChoiceProvider:
     arguments:
       - '@prestashop.core.command_bus'
       - '@=service("prestashop.adapter.legacy.configuration").getInt("PS_SHOP_DEFAULT")'
       - "@=service('prestashop.adapter.shop.context').getContextShopID()"
-
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductTypeChoiceProvider:
-  PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ZoneByIdChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CountryByIdConfigurableChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\SpecificPricePriorityChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\GenderChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ContactTypeChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerThreadStatusesChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ReductionTypeChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\DiscountApplicationChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TaxInclusionChoiceProvider:
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ShippingInclusionChoiceProvider:
-  # Should be public as used in some controllers
-  PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CurrencyByIdChoiceProvider:
-
-  # deprecated services
-  prestashop.core.form.choice_provider.currency_by_id:
-    alias: PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CurrencyByIdChoiceProvider
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.tax_inclusion:
-    alias: PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TaxInclusionChoiceProvider
-    public: true
-    deprecated: ~
-
-
-
-# deprecated old notation since 9.0
-  prestashop.core.form.choice_provider.language_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\LanguageByIdChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.all_languages:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\LanguageChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.country_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CountryByIdChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.timezone_by_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TimezoneByNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.localization_pack_by_iso_code:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\LocalizationPackByIsoCodeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.non_installed_localization:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\NonInstalledLocalizationChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.country_by_iso_code:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CountryByIsoCodeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.group_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\GroupByIdChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.carrier_by_reference_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CarrierByReferenceChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.order_state_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\OrderStateByIdChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.invoice_model_by_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\InvoiceModelByNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.mail_method:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\MailMethodChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.contact_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ContactByIdChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.translation_type:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TranslationTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.email_content_type:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\EmailContentTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.theme_by_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeByNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.theme_by_name_with_emails:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeByNameWithEmailsChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.module_by_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ModuleByNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.status:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\StatusChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.canonical_redirect_type:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CanonicalRedirectTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.category_delete_mode:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CategoryDeleteModeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customer_required_fields:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerRequiredFieldsChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.import_match_configuration:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ImportMatchConfigurationChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.import_entity_field:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ImportEntityFieldChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customer_delete_method:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerDeleteMethodChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.theme_page_layouts:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemePageLayoutsChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.theme_zip:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeZipChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.theme:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ThemeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.currency_name_by_iso_code:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CurrencyNameByIsoCodeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.permissions_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\PermissionsChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.default_meta_page_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\DefaultMetaPageNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.module_meta_page_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ModuleMetaPageNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.tax_address_type_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TaxAddressTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.tax_rule_group_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\TaxRuleGroupChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.cms_categories:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CmsCategoriesChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.accessible_tab:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\TabChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.profile:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProfileChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.mail_themes:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\MailThemeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice.provider.order_discount_type:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\OrderDiscountTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.address_required_fields:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\AddressRequiredFieldsChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customer_addresses_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerAddressesChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customer_service_order_messages_name:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerServiceOrderMessagesNameChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customer_service_order_messages:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerServiceOrderMessagesChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.delivery_time_note_types_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\DeliveryTimeNoteTypesProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.product_visibility_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductVisibilityChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.product_condition_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductConditionChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.out_of_stock_type_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\OutOfStockTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.pack_stock_type_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\PackStockTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customization_field_type_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomizationFieldTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.product_images_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductImagesChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.product_type_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ProductTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.zone_by_id:
-    alias: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ZoneByIdChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.configurable_country_by_id:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CountryByIdConfigurableChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.specific_price_priority_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\SpecificPricePriorityChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.gender_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\GenderChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.contact_type_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\ContactTypeChoiceProvider'
-    public: true
-    deprecated: ~
-
-  prestashop.core.form.choice_provider.customer_thread_statuses_choice_provider:
-    alias: 'PrestaShop\PrestaShop\Core\Form\ChoiceProvider\CustomerThreadStatusesChoiceProvider'
-    public: true
-    deprecated: ~
